# marvelous-databricks-course-XanderSchevenhoven

./: .gitignore  databricks.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
notebooks/: preprocessing.py  project_config.yml
notebooks/Week 1/: preprocessing.py
notebooks/Week 2/: 01 Prepare dataset.py  02 MLFlow experiment.py  03 Log & Register model.py  04 Log & Register custom model.py  05 Log & Register FE model.py
notebooks/Week 3/: 01 Feature serving.py
notebooks/Week 3/mlruns/0/: meta.yaml
notebooks/Week 5/: generate synthetic new data.py
power/: __init__.py  config.py  model.py  preprocessor.py  utils.py
resources/: jobs.yml  variables.yml
week5/: evaluate_model.py  process_data.py  train_model.py
