[project]
name = "mlops-with-databricks"
version = "0.0.1"
description = "MLOps with Databricks"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "ucimlrepo==0.0.7"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "databricks-connect>=15.4.1, <16",
    "databricks-sdk>=0.32.0, <0.33",
    "ipykernel>=6.29.5, <7",
    "pip>=24.2"
]

[build-system]
requires = [
  "setuptools>=72.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["power"]

[tool.ruff]
line-length = 120
lint.select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
lint.ignore = [
    "E501",  # line-too-long
    "E402", # import not at top of files
]
builtins = [
    "_",
    "dbutils",
    "spark",
    "get_ipython"
]

[tool.ruff.format]
indent-style = "space"